--- a/index.html
+++ b/index.html
@@ -13,25 +13,57 @@
 
     <div class="box">
         <div class = "row" id="8">
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
+            <div class = "square" id = "light">
+                <img src="/pieces/black_rook.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/black_knight.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/black_bishop.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/black_queen.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/black_king.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/black_bishop.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/black_knight.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/black_rook.png" draggable="true">
+            </div>
         </div>
 
         <div class = "row" id="7">
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/black_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/black_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/black_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/black_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/black_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/black_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/black_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/black_pawn.png" draggable="true">
+            </div>
         
         </div>
 
@@ -85,28 +117,56 @@
 
 
         <div class = "row" id="2">
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
+            <div class = "square" id = "light">
+                <img src="/pieces/white_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/white_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/white_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/white_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/white_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/white_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/white_pawn.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/white_pawn.png" draggable="true">
+            </div>
         </div>
 
         <div class = "row" id="1">
             <div class = "square" id = "dark">
                 <img src="/pieces/white_rook.png" draggable="true">
             </div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
-            <div class = "square" id = "light"></div>
-            <div class = "square" id = "dark"></div>
             <div class = "square" id = "light">
-                <img src="/pieces/black_rook.png" draggable="true">
+                <img src="/pieces/white_knight.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/white_bishop.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/white_queen.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/white_king.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/white_bishop.png" draggable="true">
+            </div>
+            <div class = "square" id = "dark">
+                <img src="/pieces/white_knight.png" draggable="true">
+            </div>
+            <div class = "square" id = "light">
+                <img src="/pieces/white_rook.png" draggable="true">
             </div>
         
         </div>
