--- a/index.html
+++ b/index.html
@@ -14,55 +14,55 @@
     <div class="box">
         <div class = "row" id="8">
             <div class = "square" id = "light">
-                <img src="/pieces/black_rook.png" draggable="true">
+                <img src="/pieces/black_rook.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/black_knight.png" draggable="true">
+                <img src="/pieces/black_knight.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/black_bishop.png" draggable="true">
+                <img src="/pieces/black_bishop.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/black_queen.png" draggable="true">
+                <img src="/pieces/black_queen.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/black_king.png" draggable="true">
+                <img src="/pieces/black_king.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/black_bishop.png" draggable="true">
+                <img src="/pieces/black_bishop.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/black_knight.png" draggable="true">
+                <img src="/pieces/black_knight.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/black_rook.png" draggable="true">
+                <img src="/pieces/black_rook.png" id ="b" draggable="false">
             </div>
         </div>
 
         <div class = "row" id="7">
             <div class = "square" id = "dark">
-                <img src="/pieces/black_pawn.png" draggable="true">
+                <img src="/pieces/black_pawn.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/black_pawn.png" draggable="true">
+                <img src="/pieces/black_pawn.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/black_pawn.png" draggable="true">
+                <img src="/pieces/black_pawn.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/black_pawn.png" draggable="true">
+                <img src="/pieces/black_pawn.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/black_pawn.png" draggable="true">
+                <img src="/pieces/black_pawn.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/black_pawn.png" draggable="true">
+                <img src="/pieces/black_pawn.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/black_pawn.png" draggable="true">
+                <img src="/pieces/black_pawn.png" id ="b" draggable="false">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/black_pawn.png" draggable="true">
+                <img src="/pieces/black_pawn.png" id ="b" draggable="false">
             </div>
         
         </div>
@@ -118,55 +118,55 @@
 
         <div class = "row" id="2">
             <div class = "square" id = "light">
-                <img src="/pieces/white_pawn.png" draggable="true">
+                <img src="/pieces/white_pawn.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/white_pawn.png" draggable="true">
+                <img src="/pieces/white_pawn.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/white_pawn.png" draggable="true">
+                <img src="/pieces/white_pawn.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/white_pawn.png" draggable="true">
+                <img src="/pieces/white_pawn.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/white_pawn.png" draggable="true">
+                <img src="/pieces/white_pawn.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/white_pawn.png" draggable="true">
+                <img src="/pieces/white_pawn.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/white_pawn.png" draggable="true">
+                <img src="/pieces/white_pawn.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/white_pawn.png" draggable="true">
+                <img src="/pieces/white_pawn.png" id ="w" draggable="true">
             </div>
         </div>
 
         <div class = "row" id="1">
             <div class = "square" id = "dark">
-                <img src="/pieces/white_rook.png" draggable="true">
+                <img src="/pieces/white_rook.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/white_knight.png" draggable="true">
+                <img src="/pieces/white_knight.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/white_bishop.png" draggable="true">
+                <img src="/pieces/white_bishop.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/white_queen.png" draggable="true">
+                <img src="/pieces/white_queen.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/white_king.png" draggable="true">
+                <img src="/pieces/white_king.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/white_bishop.png" draggable="true">
+                <img src="/pieces/white_bishop.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "dark">
-                <img src="/pieces/white_knight.png" draggable="true">
+                <img src="/pieces/white_knight.png" id ="w" draggable="true">
             </div>
             <div class = "square" id = "light">
-                <img src="/pieces/white_rook.png" draggable="true">
+                <img src="/pieces/white_rook.png" id ="w" draggable="true">
             </div>
         
         </div>
